任意のセルに予定を反映する準備をした

--- a/resource/index.html
+++ b/resource/index.html
@@ -7,17 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -40,24 +30,20 @@
         <input type="submit" id="saveBtn" value="決定">
     </div>
 </form>
-<table id ="mainTable">
+<table id ="mainTable" border="1">
     <tr>
         <th>　</th>
-        <td id="monday">月</td>
-        <td id="tuesday">火</td>
-        <td id="wednesday">水</td>
-        <td id="thursday">木</td>
-        <td id="friday">金</td>
-        <td id="saturday">土</td>
-        <td id="sunday">日</td>
+        <th id="monday">月</th>
+        <th id="tuesday">火</th>
+        <th id="wednesday">水</th>
+        <th id="thursday">木</th>
+        <th id="friday">金</th>
+        <th id="saturday">土</th>
+        <th id="sunday">日</th>
     </tr>
 </table>
 <script src = "main.js"></script>
 
-<!--Jquery Layoutday pluginのインストール-->
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="jquery-calendar.js"></script>
-<link rel="stylesheet" type="text/css" href="YOUR_PATH/jquery-calendar.css">
 </body>
 
 </html>
