データベース接続の準備をした

--- a/resource/index.html
+++ b/resource/index.html
@@ -27,7 +27,7 @@
         <input type="text" id="startTime" autocomplete="off">
         <input type="text" id="endTime" autocomplete="off">
         <input type="text" id="planName" autocomplete="off">
-        <input type="submit" id="saveBtn" value="決定">
+        <input type="submit" id="saveBtn" value="決定" onclick="save()">
     </div>
 </form>
 <table id ="mainTable" border="1">
