indexDBを使用できるようにした

--- a/resource/index.html
+++ b/resource/index.html
@@ -42,6 +42,8 @@
         <th id="sunday">日</th>
     </tr>
 </table>
+<script src = "https://unpkg.com/dexie@3.0.2/dist/dexie.min.js"></script>
+<script src = "db.js"></script>
 <script src = "main.js"></script>
 
 </body>
