main.jsに値の取得方法を追加

--- a/resource/index.html
+++ b/resource/index.html
@@ -15,7 +15,7 @@
 <body>
 <form id="mainForm" name="mainForm">
     <div id="btn">
-        <select name="dow">
+        <select id="dow">
             <option value="mon">月曜日</option>
             <option value="tue">火曜日</option>
             <option value="wed">水曜日</option>
@@ -27,7 +27,7 @@
         <input type="text" id="startTime" autocomplete="off">
         <input type="text" id="endTime" autocomplete="off">
         <input type="text" id="planName" autocomplete="off">
-        <input type="submit" id="saveBtn" value="決定" onclick="save()">
+        <input type="submit" id="saveBtn" value="決定">
     </div>
 </form>
 <table id ="mainTable" border="1">
